--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .profile-image {
@@ -19,7 +22,7 @@ body {
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
   border-radius: 50%;
   width: 48px;
-  height: 48px;
+  height:  48px;
 }
 
 .logo {
@@ -27,6 +30,18 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+}
+
+.one{
+  display: flex;
+  margin-left: 8px;
+}
+
+.two{
+  display: flex;
+  gap: 16px;
+  align-items: center;
+  margin-right: 8px;
 }
 
 button {
@@ -45,4 +60,6 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
 }
